--- a/src/index.css
+++ b/src/index.css
@@ -48,7 +48,7 @@
     @apply font-primary text-[32px] mb-6 tracking-[10%] uppercase;
   }
   .h3 {
-    @apply font-primary text-[26px] mb-6 leading-[46px];
+    @apply font-primary font-semibold text-[26px] mb-6 leading-[46px];
   }
   .btn {
     @apply rounded-full font-primary text-white font-medium;
