--- a/src/index.css
+++ b/src/index.css
@@ -54,7 +54,7 @@
     @apply rounded-full font-primary text-white font-medium;
   }
   .btn-sm {
-    @apply h-[48px] px-5 text-sm;
+    @apply h-[48px] px-6 text-sm;
   }
   .btn-lg {
     @apply h-[56px] px-10 text-base;
@@ -66,6 +66,6 @@
     @apply bg-gradient-to-r text-transparent bg-clip-text from-[#42A6E3] to-[#FF56F6] font-bold font-primary hover:from-[#FF56F6] hover:to-[#42A6E3];
   }
   .section {
-    @apply py-24;
+    @apply py-4 lg:py-24 lg:h-screen flex items-center;
   }
 }
